# homemetrics

./: .env.example  .gitignore  BLUE_RIOT_INTEGRATION.md  Cargo.toml  Dockerfile  GMAIL_API_MIGRATION.md  README.md  codecov.yml  coverage.sh  homemetrics.service  init_db.sql  tarpaulin.toml  test.sh  test_env.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/initdb/: 00_create_dbs.sh
.github/: copilot-instructions.md
.github/workflows/: coverage.yml  homemetrics.yml
coverage/: cobertura.xml  tarpaulin-report.html
data_test/: blueriot.eml  xsense.eml
docs/: COVERAGE_SETUP.md  DATABASE_TESTING.md  LABEL_CACHE_OPTIMIZATION.md  SENSOR_ID_FIX.md  TOKEN_REFRESH.md  TOKEN_REFRESH_FIX.md
scripts/: coverage.sh  fix_sensor_id.sql  show_coverage.sh  test_token_refresh.sh  watch_token_cache.sh
src/: attachment_parser.rs  config.rs  database.rs  email_common.rs  email_processor.rs  email_processor_base.rs  gmail_client.rs  imap_client.rs  lib.rs  main.rs  pool_processor.rs  slack_notifier.rs  temperature_extractor.rs  token_refresh.rs
src/blueriot/: extractor.rs  mod.rs  processor.rs
src/email/: common.rs  mod.rs  processor_base.rs
src/xsense/: extractor.rs  mod.rs  processor.rs
tests/: blueriot_test.rs  xsense_test.rs
